--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dev": "export NODE_ENV=development && node ./build/node-dev",
     "test-webpack-base": "node ./build/webpack.base.config.js",
     "test-webpack-dev": "export NODE_ENV=development && webpack --config ./build/webpack.dev.config.js",
+    "dev-server.js": "export NODE_ENV=production && node build/dev-server.js",
     "test-webpack-prod": "export NODE_ENV=production && webpack --config ./build/webpack.prod.config.js",
     "build": ""
   },
@@ -48,6 +49,8 @@
     "babel-runtime": "^6.26.0",
     "bootstrap": "^3.3.7",
     "cnpm": "^5.1.1",
+    "compression-webpack-plugin": "^1.0.1",
+    "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.2.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
@@ -58,12 +61,15 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
+    "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
     "hbs-utils": "^0.0.4",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.17.4",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "jquery-parallax": "^1.0.1",
@@ -77,6 +83,7 @@
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "portfinder": "^1.0.13",
     "reload": "^2.2.2",
     "sass-loader": "^6.0.6",
@@ -86,10 +93,12 @@
     "themify-icons": "^1.0.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-merge": "^2.6.1",
     "wowjs": "^1.1.3"
+  },
+  "engines": {
+    "node": ">= 8.0.0",
+    "npm": ">= 4.0.0"
   }
 }
