--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,10 @@ typings/
 # dotenv environment variables file
 .env
 
-backup/
-public/
-
+# for IDEA
 .idea
+
+# temp file
+resource.hbs
+public/
+backup/
