--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "hbs-utils": "^0.0.4",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
+    "husky": "^0.14.3",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "jquery-parallax": "^1.0.1",
