build: 构建性能优化, 将manifest内联到html中, 减小请求

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   ],
   "scripts": {
     "start": "export PORT=3000 && node ./bin/www",
-    "node:dev": "export NODE_ENV=node-development && node ./build/node-dev",
-    "node-client:dev": "export NODE_ENV=development && node ./build/node-dev",
-    "client:build": "export NODE_ENV=production && webpack --config ./build/webpack.prod.config.js",
+    "node:dev": "cross-env NODE_ENV=node-development && node ./build/node-dev",
+    "node-client:dev": "cross-env NODE_ENV=development && node ./build/node-dev",
+    "client:build": "cross-env NODE_ENV=production && webpack --config ./build/webpack.prod.config.js",
     "lint": "eslint --ext .js client/views client/assets/js",
     "lint:fix": "npm run lint -- --fix",
     "precommit": "lint-staged",
@@ -60,6 +60,7 @@
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^3.3.7",
+    "clean-webpack-plugin": "^0.1.17",
     "cnpm": "^5.1.1",
     "compression-webpack-plugin": "^1.0.1",
     "connect-history-api-fallback": "^1.4.0",
@@ -83,6 +84,7 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "husky": "^0.14.3",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "jquery-parallax": "^1.0.1",
